--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,28 @@
-<!DOCTYPE html>
+
+<html>
+<head>
+<title>404</title>
+</head>
+<body bgcolor=cccccc>
+
+<table border=0 width=100% height=100%><tr><td height=100% width=100% align=center>
+
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="500" height="300" id="err" align="middle">
+<param name="allowScriptAccess" value="sameDomain" />
+<param name="movie" value="http://www.tinsanity.net/err.swf?err=404&subtext=THE PAGE YOU ARE LOOKING FOR DOES NOT EXIST. SORRY :'(" />
+<param name="quality" value="high" />
+<param name="bgcolor" value="#cccccc" />
+<embed src="http://www.tinsanity.net/err.swf?err=404&subtext=THE PAGE YOU ARE LOOKING FOR DOES NOT EXIST. SORRY :'(" quality="high" bgcolor="#cccccc" width="500" height="300" name="err" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
+
+</td></tr></table>
+</body>
+</html>
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
@@ -16,11 +40,11 @@
   </style>
 </head>
 
-<body>
+<body> -->
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
+  <!-- <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
   </div>
 </body>
-</html>
+</html> -->
